# kelihi-senior-analyst-evaluation

./: .gitignore  README.md  UV_SETUP.md  pyproject.toml  run_example.sh  setup.sql
data/raw/: events.jsonl  orders_v1.csv  payments.csv  product_catalog_v1.csv  product_catalog_v2.csv  users.csv
