[project]
name = "kelihi-senior-analyst-assessment"
version = "0.1.0"
description = "Kelihi Senior Analyst assessment environment"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Kelihi" }]

dependencies = [
  "duckdb==1.0.0",
  "pyarrow==15.0.2",
  "pandas==2.2.2",
  "python-dateutil==2.9.0.post0"
]

[project.optional-dependencies]
viz = ["plotly==5.22.0", "matplotlib==3.8.4"]

[tool.uv]
